# ChangeLog for media-gfx/giram
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/giram/Attic/ChangeLog,v 1.7 2005/08/19 23:33:37 vanquirius Exp $

  19 Aug 2005; Marcelo Goes <vanquirius@gentoo.org> giram-0.3.5.ebuild:
  Use elibtoolize to avoid warning messages regarding libtool.

*giram-0.3.5 (13 Aug 2005)

  13 Aug 2005; Marcelo Goes <vanquirius@gentoo.org>
  +files/giram-0.3.4-fbsd.patch, +files/giram-0.3.5-fbsd.patch,
  giram-0.3.4.ebuild, +giram-0.3.5.ebuild:
  0.3.5 version bump, using patches from FreeBSD. Also backported patches to
  0.3.4. Should fix bug 49829. Thanks to Andre Hinrichs
  <andre.hinrichs@gmx.de> and others for reporting.

  18 Nov 2003; Brandy Westcott brandy@gentoo.org giram-0.3.4.ebuild:
  Fixed povfront segfaulting if no config file existed.

*giram-0.3.4 (17 Oct 2002)

  17 Oct 2002; Ryan Phillips <rphillips@gentoo.org> giram-0.3.4.ebuild :

  version bump

*giram-0.3.3 (23 July 2002)

  23 Jyly 2002; Thomas Otvald Jensen <otvald@hotmail.com> ChangeLog :
  
  Initial release...

  This is my very first ebuild package, so please be gentle if something
  obvious-for-the-expert-guru is missing.

  I have added two additional "USE" flags for building: 'bishop3d' and 'vik'.
  I don't think anyone will need it, but it's there!