@@ -1,10 +1,8 @@
-MD5 07418c593c0743e711ca51d7ae11e795 giram-0.3.3.ebuild 1004
-MD5 6a96abfe7bc0e12b39e209a725f5a9fc giram-0.3.5.ebuild 1229
-MD5 ad713197382ef6ec3abb5556549f95cf giram-0.3.4.ebuild 1198
 MD5 857011eece392e936085e0d77b814d31 ChangeLog 1331
-MD5 5fc54c5d01402d0610fafa96961bb8e0 metadata.xml 161
-MD5 e74ef6203f46822ded7256cea16f67d9 files/giram-0.3.5-fbsd.patch 5157
-MD5 0b7a883689b1149507702593d3c79ce3 files/digest-giram-0.3.3 64
 MD5 874c146dc51dca7e7230430c342bbd5a files/digest-giram-0.3.4 64
 MD5 f91a82238c2ace1ce56e21e992a0a69b files/digest-giram-0.3.5 64
 MD5 8070263059a0d62266339edb32750bfd files/giram-0.3.4-fbsd.patch 4157
+MD5 e74ef6203f46822ded7256cea16f67d9 files/giram-0.3.5-fbsd.patch 5157
+MD5 ad713197382ef6ec3abb5556549f95cf giram-0.3.4.ebuild 1198
+MD5 3ab6bd9b9cd38aa18963cebdf8c7d1d3 giram-0.3.5.ebuild 1236
+MD5 5fc54c5d01402d0610fafa96961bb8e0 metadata.xml 161
