@@ -1,6 +1,10 @@
 # ChangeLog for media-gfx/giram
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/giram/Attic/ChangeLog,v 1.7 2005/08/19 23:33:37 vanquirius Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/giram/Attic/ChangeLog,v 1.8 2005/12/15 22:09:58 vanquirius Exp $
+
+  15 Dec 2005; Marcelo Goes <vanquirius@gentoo.org> -giram-0.3.3.ebuild,
+  giram-0.3.5.ebuild:
+  Remove old ebuild, mark 0.3.5 x86 stable.
 
   19 Aug 2005; Marcelo Goes <vanquirius@gentoo.org> giram-0.3.5.ebuild:
   Use elibtoolize to avoid warning messages regarding libtool.
